11-myself/download/example-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: my-example-ingress

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:

  rules:

    - host: hello-world.info

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: nginx-service

                port:

                  number: 80
